src/objects/Scenario_Expense__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Scenario Expenses</relationshipLabel>
        <relationshipName>Scenario_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Growth__c</fullName>
        <label>Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_Outflow__c</fullName>
        <label>Monthly Outflow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Priority 1 (must have)</fullName>
                </value>
                <value>
                    <fullName>Priority 2</fullName>
                </value>
                <value>
                    <fullName>Priority 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scenario_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scenario Id</label>
        <referenceTo>Scenario__c</referenceTo>
        <relationshipLabel>Scenario Expenses</relationshipLabel>
        <relationshipName>Scenario_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Scenario Expense</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Scenario Expense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scenario Expenses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>